add logging to web server

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
-db:
-  image: mysql:8
-  container_name: mysql
-  ports:
-    - 3306:3306
-  environment:
-    MYSQL_ROOT_PASSWORD: secret
-    MYSQL_DATABASE: imovies
-  volumes:
-    - ./db:/docker-entrypoint-initdb.d
+services:
+  db:
+    image: mysql:8
+    container_name: mysql
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: imovies
+    volumes:
+      - ./db:/docker-entrypoint-initdb.d
