--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 cryptography==38.0.3
 Flask==2.2.2
 Flask-Login==0.6.2
+gunicorn==20.1.0
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -12,6 +13,7 @@ mypy-extensions==0.4.3
 pathspec==0.10.1
 platformdirs==2.5.3
 pycparser==2.21
+python-dotenv==0.21.0
 tomli==2.0.1
 typing_extensions==4.4.0
 Werkzeug==2.2.2
