--- a/shared/ansible/common.yml
+++ b/shared/ansible/common.yml
@@ -1,8 +1,19 @@
 ---
-- hosts: web
+- hosts: web,db
   become: yes
   tasks:
     - name: Update and upgrade apt packages
       apt:
         upgrade: yes
         update_cache: yes
+
+    - name: Install vim
+      apt: name=vim update_cache=true state=present
+
+    - name: Install Python pip
+      apt: name=python3-pip update_cache=true state=present force_apt_get=yes
+
+    - name: Install Python packages
+      pip: name={{ item }}
+      with_items:
+        - mysql-connector-python
