--- a/shared/ansible/site.yml
+++ b/shared/ansible/site.yml
@@ -1,9 +1,9 @@
 ---
-- import_playbook: common.yml
+# - import_playbook: common.yml
 
 # - import_playbook: backupservers.yml
 # - import_playbook: configservers.yml
 # - import_playbook: dbservers.yml
 # - import_playbook: caservers.yml
-# - import_playbook: webservers.yml
-- import_playbook: clientservers.yml
+- import_playbook: webservers.yml
+# - import_playbook: clientservers.yml
