--- a/shared/ansible/site.yml
+++ b/shared/ansible/site.yml
@@ -4,6 +4,6 @@
 # - import_playbook: backupservers.yml
 # - import_playbook: configservers.yml
 # - import_playbook: dbservers.yml
-# - import_playbook: caservers.yml
+- import_playbook: caservers.yml
 - import_playbook: webservers.yml
 - import_playbook: clientservers.yml
