--- a/shared/ansible/roles/nftables/tasks/main.yml
+++ b/shared/ansible/roles/nftables/tasks/main.yml
@@ -11,18 +11,10 @@
     enabled: yes
   become: true
 
-- name: Ensure nftables conf directory exists
-  file:
-    path: /etc/nftables
-    state: directory
-    owner: root
-    group: root
-    mode: 0755
-
 - name: Configure nftables
   template:
     src: nftables.conf.j2
-    dest: /etc/nftables/nftables.conf
+    dest: /etc/nftables.conf
     owner: root
     group: root
     mode: 0644
