--- a/shared/ansible/roles/web/tasks/main.yml
+++ b/shared/ansible/roles/web/tasks/main.yml
@@ -28,6 +28,14 @@
 # - name: Copy certificates for ca, db for server authentication
 # - name: Copy certificates, key for internal tls connections, client authentication
 
+- name: Create environment file
+  template:
+    src: webserver.env.j2
+    dest: /etc/systemd/system/webserver.env
+    owner: root
+    group: root
+    mode: 0600
+
 - name: Create service
   template:
     src: webserver.service.j2
