--- a/shared/ansible/site.yml
+++ b/shared/ansible/site.yml
@@ -1,5 +1,5 @@
 ---
-# - import_playbook: common.yml
+- import_playbook: common.yml
 
 # - import_playbook: backupservers.yml
 # - import_playbook: configservers.yml
