--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -16,6 +16,7 @@ platformdirs==2.5.3
 pycparser==2.21
 python-dotenv==0.21.0
 PyMySQL==1.0.2
+pyOpenSSL==22.1.0
 tomli==2.0.1
 typing_extensions==4.4.0
 Werkzeug==2.2.2
