--- a/shared/ansible/create-admin.yml
+++ b/shared/ansible/create-admin.yml
@@ -7,6 +7,8 @@
         name: admin
         state: present
         shell: /bin/bash
+        groups: sudo
+        append: yes
         password: "{{ admin_password | password_hash('sha512') }}"
         generate_ssh_key: yes
         ssh_key_type: ed25519
@@ -15,7 +17,7 @@
     - name: Copy public key to vagrant share
       copy:
         src: /home/admin/.ssh/id_ed25519.pub
-        dest: /vagrant/shared/keystore/id_ed25519.pub
+        dest: /vagrant/client/id_ed25519.pub
         remote_src: yes
 
 - hosts: configservers
@@ -33,4 +35,4 @@
       authorized_key:
         user: admin
         state: present
-        key: "{{ lookup('file', '/vagrant/shared/keystore/id_ed25519.pub') }}"
+        key: "{{ lookup('file', '/vagrant/client/id_ed25519.pub') }}"
