--- a/shared/ansible/roles/web/tasks/main.yml
+++ b/shared/ansible/roles/web/tasks/main.yml
@@ -36,7 +36,7 @@
     group: root
     mode: 0600
 
-- name: Create service
+- name: Create webserver service
   template:
     src: webserver.service.j2
     dest: /etc/systemd/system/webserver.service
@@ -48,7 +48,7 @@
   systemd: 
     daemon_reload: yes
 
-- name: Start service
+- name: Start webserver service
   systemd:
     name: webserver
     enabled: yes
