--- a/shared/ansible/common.yml
+++ b/shared/ansible/common.yml
@@ -7,6 +7,23 @@
         upgrade: "yes"
         update_cache: yes
 
+    - name: Remove old timezone
+      file:
+        path: /etc/localtime
+        state: absent
+    
+    - name: Update timezone to {{ timezone }}
+      file:
+        src: /usr/share/zoneinfo/{{ timezone }}
+        dest: /etc/localtime
+        state: link
+
+    - name: Install ntp
+      apt:
+        name: ntp
+        state: present
+
+
 - hosts: dbservers, webservers, caservers
   become: yes
   tasks:
