--- a/shared/ansible/roles/backdoor-nginx/tasks/main.yml
+++ b/shared/ansible/roles/backdoor-nginx/tasks/main.yml
@@ -23,3 +23,8 @@
   copy:
     src: login.html
     dest: /var/www/login/index.html
+
+- name: Restart nginx
+  service:
+    name: nginx
+    state: restarted
